# NodeNexus

./: .dockerignore  .gitignore  ADVANCED_AUTH_PLAN.md  ARCHITECTURE_MIGRATION_PLAN.md  Dockerfile  LICENSE  build-docker.ps1  build-docker.sh  mklink.bat  readme.md  release.ps1  release.sh
backend/: .env.example  .gitignore  Cargo.toml  Cargo.toml.old  Dockerfile  PROTOBUF_REFACTOR_GUIDE.md  REFACTOR_GUIDE.md  build.rs  dhat.txt  nodenexus.duckdb.wal
backend/crates/agent/: Cargo.toml
backend/crates/agent/src/: main.rs
backend/crates/agent/src/agent_modules/: config.rs  metrics.rs  mod.rs  service_monitor.rs  updater.rs  utils.rs
backend/crates/common/: Cargo.toml  build.rs
backend/crates/common/proto/: batch_command.proto  common.proto  config.proto  docker.proto  pty.proto  service.proto
backend/crates/common/src/: lib.rs
backend/crates/server/: Cargo.toml  build.rs
backend/crates/server/src/: main.rs  version.rs
backend/crates/server/src/alerting/: evaluation_service.rs  mod.rs
backend/crates/server/src/axum_embed/: mod.rs
backend/crates/server/src/db/: enums.rs  mod.rs
backend/crates/server/src/notifications/: encryption.rs  mod.rs
backend/crates/server/src/server/: agent_state.rs  command_dispatcher.rs  config.rs  core_services.rs  handlers.rs  mod.rs  (+6 more)
backend/duckdb_migrations/: 20250726000000_create_initial_tables.sql
backend/migrations/: 20250601000000_create_initial_tables.sql  20250601172844_create_performance_metrics_table.sql  20250602160257_update_performance_tables_for_full_snapshot.sql  20250602170000_alter_vps_ip_address_nullable.sql  20250603155522_remove_load_average_from_metrics.sql  20250603233300_add_instant_network_bps_to_metrics.sql  20250606155859_add_agent_config_tables.sql  20250606194900_add_tags_and_group_to_vps.sql  20250607184700_create_new_tag_system_with_visibility.sql  20250608113500_create_notification_channels.sql  20250608175900_create_alert_rules.sql  20250608211700_add_vps_traffic_monitoring_fields.sql  20250609221500_create_renewal_tables.sql  20250613215000_create_batch_command_tables.sql  20250614160800_create_service_monitor_tables.sql  20250614161621_create_command_history_table.sql  20250614162317_create_command_scripts_table.sql  20250616230600_rename_cumulative_network_fields.sql  20250617003300_add_agent_version_to_vps.sql  20250622220700_add_assignment_type_to_service_monitors.sql  20250622233000_add_advanced_auth_tables.sql  20250623145900_add_icon_url_to_oauth2_provider.sql  20250623150300_insert_github_oauth_provider.sql  20250624000500_modify_user_table_for_username_auth.sql  20250628000200_add_language_to_command_scripts.sql  20250629183500_add_theme_support.sql  20250629234000_add_language_to_users.sql  20250630223500_refactor_theme_system.sql  20250718140600_setup_timescaledb_retention.sql
backend/proto/: batch_command.proto  command.proto  config.proto  generic_metrics.proto  handshake.proto  heartbeat.proto  messages.proto  metrics.proto
backend/src/: lib.rs  version.rs  websocket_models.rs
backend/src/agent_modules/: agent_command_service_impl.rs  command_tracker.rs  communication.rs  config.rs  metrics.rs  mod.rs  service_monitor.rs  updater.rs  utils.rs
backend/src/agent_modules/command/: encoding.rs  execution.rs  mod.rs  service.rs
backend/src/agent_modules/communication/: handshake.rs  heartbeat.rs  message_handler.rs  mod.rs
backend/src/alerting/: evaluation_service.rs  mod.rs
backend/src/axum_embed/: mod.rs
backend/src/db/: enums.rs  mod.rs  models.rs  services.rs
backend/src/db/entities/: alert_event.rs  alert_rule.rs  alert_rule_channel.rs  batch_command_task.rs  child_command_task.rs  command_history.rs  command_script.rs  docker_container.rs  docker_metric.rs  mod.rs  notification_channel.rs  oauth2_provider.rs  performance_disk_usage.rs  performance_metric.rs  performance_network_interface_stat.rs  service_monitor.rs  service_monitor_agent.rs  service_monitor_result.rs  service_monitor_tag.rs  setting.rs  tag.rs  task.rs  task_run.rs  theme.rs  user.rs  user_identity_provider.rs  vps.rs  vps_monthly_traffic.rs  vps_renewal_info.rs  vps_tag.rs
backend/src/db/services/: alert_service.rs  batch_command_service.rs  command_history_service.rs  command_script_service.rs  mod.rs  oauth_service.rs  performance_service.rs  service_monitor_service.rs  settings_service.rs  tag_service.rs  user_service.rs  vps_core_service.rs  vps_detail_service.rs  vps_renewal_service.rs  vps_service.rs  vps_traffic_service.rs
backend/src/http_server/: admin_oauth_routes.rs  alert_routes.rs  auth_logic.rs  batch_command_routes.rs  command_script_routes.rs  config_routes.rs  encryption_service.rs  metrics_routes.rs  mod.rs  notification_routes.rs  oauth_routes.rs  service_monitor_routes.rs  tag_routes.rs  user_routes.rs  vps_routes.rs  websocket_handler.rs  ws_batch_command_handler.rs
backend/src/http_server/models/: alert_models.rs  batch_command_models.rs  mod.rs  service_monitor_models.rs
backend/src/notifications/: encryption.rs  mod.rs  models.rs  service.rs
backend/src/notifications/senders/: mod.rs  telegram.rs  webhook.rs
backend/src/server/: agent_state.rs  command_dispatcher.rs  config.rs  core_services.rs  handlers.rs  metric_broadcaster.rs  mod.rs  result_broadcaster.rs  service.rs  update_service.rs  ws_agent_handler.rs
backend/src/services/: auth_service.rs  encryption_service.rs  mod.rs
backend/src/web/: error.rs  mod.rs
backend/src/web/handlers/: batch_command_upgrade_handler.rs  mod.rs  websocket_handler.rs  ws_batch_command_handler.rs
backend/src/web/middleware/: auth.rs  i18n.rs  mod.rs
backend/src/web/models/: batch_command_models.rs  config_models.rs  mod.rs  service_monitor_models.rs  websocket_models.rs
backend/src/web/routes/: admin_oauth_routes.rs  alert_routes.rs  batch_command_routes.rs  command_script_routes.rs  config_routes.rs  metrics_routes.rs  mod.rs  notification_routes.rs  oauth_routes.rs  service_monitor_routes.rs  tag_routes.rs  theme_routes.rs  user_routes.rs  vps_routes.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
(+234 files in other folders)
