[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
prost = "0.13"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync"] } # Added "sync" for Mutex
tonic = { version = "0.13", features = ["transport", "codegen", "prost"] }
chrono = { version = "0.4", features = ["serde"] } # Added for timestamp generation
futures-util = { version = "0.3" }
tokio-stream = "0.1" # Added for stream utilities
uuid = { version = "1.17", features = ["v4"] } # Added for UUID generation
sysinfo = "0.35" # 添加系统信息收集库
netdev = "0.35" # Added for getting default network interface info
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "json" ] }
axum = { version = "0.8", features = ["ws", "macros"] } # Added ws and macros features
jsonwebtoken = "9"
bcrypt = "0.17"
thiserror = "2.0"
dotenv = "0.15"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3.31"

[build-dependencies]
prost-build = "0.13"
tonic-build = { version = "0.13", features = ["prost"] }
