[package]
name = "backend"
version = "0.1.1"
edition = "2024"

[dependencies]
bytes = "1.10"
prost = "0.13"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time", "process"] } # Added "sync", "time", and "process"
tonic = { version = "0.13", features = ["transport", "codegen", "prost", "tls-native-roots"] }
tokio-rustls = "0.26"
rustls = "0.23"
chrono = { version = "0.4", features = ["serde"] } # Added for timestamp generation
futures-util = { version = "0.3" }
tokio-stream = "0.1" # Added for stream utilities
uuid = { version = "1.17", features = ["v4"] } # Added for UUID generation
sysinfo = "0.35" # 添加系统信息收集库
netdev = "0.35" # Added for getting default network interface info
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "json" ] }
axum = { version = "0.8", features = ["ws", "macros"] } # Added ws and macros features
jsonwebtoken = "9"
bcrypt = "0.17"
rustls-native-certs = "0.8"
thiserror = "2.0"
dotenv = "0.15"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3" # Ensure this is a compatible version, or update if necessary
once_cell = "1.21" # Added for static HTTP clients
tera = "1.20"
aes-gcm = "0.10"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # Updated to a specific 0.12.x version and changed features
hex = "0.4"
axum-extra = { version = "0.10", features = ["cookie"] }
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono", "with-json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
tracing-log = "0.2"
surge-ping = "0.8"
encoding_rs = "0.8"
lazy_static = "1.5"
rand = "0.9"
rust-embed = "8.7"
mime_guess = "2.0"
http-body-util = "0.1"
hyper = "1.6.0"
tower = "0.5.2"
time = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "winuser", "errhandlingapi"] }
windows-sys = { version = "0.60", features = ["Win32_Globalization"] } # Ensure this is the correct version
codepage = "0.1"
windows-service = "0.8"


[build-dependencies]
prost-build = "0.13"
tonic-build = { version = "0.13", features = ["prost"] }
