[package]
name = "nodenexus-agent"
version = "0.1.1"
edition = "2021"

[dependencies]
nodenexus-common = { path = "../common" }


tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time", "process", "signal", "fs"] }
tonic = { version = "0.13", features = ["transport", "codegen", "prost", "tls-native-roots"] }
prost = "0.13"
futures-util = "0.3"
rustls = "0.23"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }


sysinfo = "0.35"
netdev = "0.35"

clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
surge-ping = "0.8"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20"
rand = "0.9"
encoding_rs = "0.8"
lazy_static = "1.5"
futures = "0.3"

uuid = { version = "1.17", features = ["v4"] }
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
winapi = { version = "0.3", features = ["winnt", "winuser", "errhandlingapi"] }
windows-sys = { version = "0.60", features = ["Win32_Globalization"] }
codepage = "0.1"

dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]