[package]
name = "nodenexus-common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
tonic = { version = "0.13", features = ["prost"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.13"
tonic-build = { version = "0.13", features = ["prost"] }