[package]
name = "nodenexus-server"
version = "0.1.1"
edition = "2021"

[dependencies]
nodenexus-common = { path = "../common" }

strum = "0.27"
strum_macros = "0.27"
bytes = "1.10"
prost = "0.13"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time", "process", "signal"] }
tonic = { version = "0.13", features = ["transport", "codegen", "prost", "tls-native-roots"] }
tokio-rustls = "0.26"
dashmap = "6.1"
rustls = "0.23"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3" }
tokio-stream = "0.1"
uuid = { version = "1.17", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duckdb = { version = "1.3", features = ["bundled", "chrono", "r2d2", "uuid"] }
r2d2 = "0.8"
axum = { version = "0.8", features = ["ws", "macros"] }
jsonwebtoken = "9"
bcrypt = "0.17"
rustls-native-certs = "0.8"
thiserror = "2.0"
dotenv = "0.15"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
once_cell = "1.21"
tera = "1.20"
aes-gcm = "0.10"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hex = "0.4"
rust-i18n = "3.1"
axum-extra = { version = "0.10", features = ["cookie"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
tracing-log = "0.2"
encoding_rs = "0.8"
lazy_static = "1.5"
rand = "0.9"
rust-embed = "8.7"
mime_guess = "2.0"
http-body-util = "0.1"
hyper = "1.6.0"
tower = "0.5.2"
time = "0.3"
urlencoding = "2.1.3"
envy = "0.4"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
self_update = { version = "0.42.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
semver = "1.0"
tempfile = "3.20"